--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="pricing.html">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pricing.html">Contacts</a>
+                            <a class="nav-link" href="pricing.html">About us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pricing.html">
