--- a/pricing.html
+++ b/pricing.html
@@ -29,7 +29,7 @@
               <a class="nav-link active" href="pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Contacts</a>
+              <a class="nav-link" href="pricing.html">About us</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="pricing.html">
