--- a/index.html
+++ b/index.html
@@ -161,28 +161,19 @@
 
                 <div class="col-lg-3 col=md-12">
                     <div class="row px-2">
-                        <div class="col-lg-12 sidebar my-4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae laborum, earum minima
-                                optio
-                                veritatis nemo magnam in? Doloribus laborum explicabo autem repellat suscipit
-                                consequatur?
-                                Similique, totam. <a href="#">learn more>>></a></p>
-                        </div>
-                        <div class="col-lg-12 sidebar my-4">
-                            <p>Vitae laborum, optio veritatis nemo magnam in? Doloribus laborum explicabo autem repellat
-                                suscipit consequatur? Similique, totam. <a href="#">learn more>>></a></p>
-                        </div>
-                        <div class="col-lg-12 sidebar my-4">
-                            <p>Lorem ipsum dolor veritatis nemo magnam in? Doloribus laborum explicabo autem repellat
-                                suscipit
-                                consequatur? Similique, totam. <a href="#">learn more>>></a></p>
-                        </div>
-                        <div class="col-lg-12 sidebar my-4">
-                            <p>Lorem, earum minima optio veritatis nemo magnam in? Doloribus laborum explicabo autem
-                                repellat
-                                suscipit consequatur? Similique, totam. <a href="#">learn more>>></a></p>
-                        </div>
-                    </div>
+            <div class="col-lg-12 sidebar my-4">
+              <p>Flowers not only decorate our home and gardens, but also bring many health benefits. They release oxygen, purify the air from harmful substances and bacteria, and can also be used for medicinal purposes. <a href="#">learn more>>></a></p>
+            </div>
+            <div class="col-lg-12 sidebar my-4">
+              <p>Essential oils can be made from flowers, which have antiseptic, soothing and relaxing properties. In addition, flowers are a great gift for family and friends, creating an atmosphere of joy and happiness. <a href="#">learn more>>></a></p>
+            </div>
+            <div class="col-lg-12 sidebar my-4">
+              <p>Giving flowers to women is a wonderful way to express your feelings, show care and attention. Flowers can be a symbol of love, gratitude, respect, or just a sign of attention. <a href="#">learn more>>></a></p>
+            </div>
+            <div class="col-lg-12 sidebar my-4">
+              <p>When choosing flowers, consider the preferences and character of the woman you want to give a gift to. It can be roses, lilies, orchids, tulips or other flowers that she likes. The main thing is to give flowers with a soul and sincere feelings, so that they bring joy and a smile on the face of your beloved woman. <a href="#">learn more>>></a></p>
+            </div>
+          </div>
                 </div>
     </section>
 
