--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="i/"><img src="source/files/логотип.png" alt="..."></a>
+        <a class="navbar-brand" href="/"><img src="source/files/логотип.png" alt="..."></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,8 +29,11 @@
               <a class="nav-link active" href="pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">About us</a>
+              <a class="nav-link" href="Aboutus.html">About us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Personalaccount.html">Personal account</a>
+        </li>
           <li class="nav-item">
               <a class="nav-link" href="pricing.html">
                   <img style="width: 30px; margin-inline: 1em;" src="source/files/tg.png" alt="...">
@@ -196,7 +199,7 @@
               <p>Giving flowers to women is a wonderful way to express your feelings, show care and attention. Flowers can be a symbol of love, gratitude, respect, or just a sign of attention. <a href="#">learn more>>></a></p>
             </div>
             <div class="col-lg-12 sidebar my-4">
-              <p>When choosing flowers, consider the preferences and character of the woman you want to give a gift to. It can be roses, lilies, orchids, tulips or other flowers that she likes. The main thing is to give flowers with a soul and sincere feelings, so that they bring joy and a smile on the face of your beloved woman. <a href="#">learn more>>></a></p>
+              <p>When choosing flowers, consider the preferences and character of the woman you want to give a gift to. It can be roses, lilies, orchids, tulips or other flowers that she likes. The main thing is to give flowers with a soul and sincere feelings, so that they bring joy and a smile on the face of your beloved woman.<a href="#">learn more>>></a></p>
             </div>
           </div>
         </div>
